--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 <Title>Yes</Title>
-<body style="text-align:center">
-<h3>Hi<h3>
+<body>
+<h3style="text-align:center">Hi</h3>
 </body>
 </html>
