--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE>
+<style>
+body{background-image:url("~/images/mooncakeBunny.mp4"; background-repeat=repeat;}
+</style>
 <html>
 <Title>Yes</Title>
 <body>
