--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE>
 <style>
-body{background-image:url("~/images/mooncakeBunny.mp4"; background-repeat=repeat;}
+body{background-image:url("images/mooncakeBunny.mp4"; background-repeat=repeat;}
 </style>
 <html>
 <Title>Yes</Title>
 <body>
-<h3style="text-align:center">Hi</h3>
+<h3 style="text-align:center">Hi</h3>
+<h3> no</h3>
 </body>
 </html>
