--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE>
 <style>
-body{background-image:url("images/mooncakeBunny.mp4"; background-repeat=repeat;}
+body{
+background-image:url("images/mooncakeBunny.gif";
+}
 </style>
 <html>
 <Title>Yes</Title>
