--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <style>
 body{
-background-image:url("images/mooncakeBunny.gif";
+background-image:url("images/mooncakeBunny.gif");
 }
 </style>
 <html>
