--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE>
 <style>
 body{
-background-image:url("images/mooncakeBunny.gif");
+background-image: url("images/mooncakeBunny.gif");
+background-repeat: no-repeat;
+background-size: auto;
 }
 </style>
 <html>
