--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 body{
 background-image: url(images/mooncakeBunny.gif);
 background-repeat: no-repeat;
-background-size: auto;
+background-size: 1000px  600px;
 }
 </style>
 <html>
