--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@ background-size: 1800px  800px;
 }
 </style>
 <html>
-<Title>Yes</Title>
+<Title>Hi.</Title>
 <body>
-<h3 style="text-align:center">Hi</h3>
+<h3 style="text-align:center">Hi. I'm not done this yet.</h3>
 <h3> no</h3>
 </body>
 </html>
