--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <style>
 body{
-background-image: url(images/mooncakeBunny.gif);
-background-repeat: no-repeat;
-background-size: 1800px  800px;
+  background-color: #ed281a;
 }
 </style>
 <html>
 <Title>Hi.</Title>
 <body>
-<h3 style="text-align:center">Hi. I'm not done this yet.</h3>
-<h3> no</h3>
+  <button class="button button4" border="2px solid grey">yes</button>
 </body>
 </html>
