--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <style>
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50; /* Green */
+}
 body{
   background-color: #ed281a;
 }
@@ -8,6 +13,6 @@ body{
 <html>
 <Title>Hi.</Title>
 <body>
-  <button class="button button4" border="2px solid grey">yes</button>
+  <button class="button button4">yes</button>
 </body>
 </html>
