--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>CPS530 Skeleton Page</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Temp CPS530 Skeleton Page">
+  <meta name="author" content="Eyho Cao">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -29,7 +29,7 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body>
+<body style="background-color:lightblue;">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
