--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container" style="text-align:center;">
+    <p>CPS530 Demo Page</p>
+  </div>
   <div class="container">
-    <p>test</p>
+    
   </div>
 
 <!-- End Document
