--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <form>
   <div class="row">
     <div class="six columns">
-      <label for="todoInput">Your email</label>
+      <label for="todoInput">Your Task</label>
       <input class="u-full-width" type="text" placeholder="Your Task" id="todoInput">
     </div>
     <div class="six columns">
@@ -55,7 +55,7 @@
       </select>
     </div>
   </div>
-  <label for="todoDesc">Message</label>
+  <label for="todoDesc">Task Description</label>
   <textarea class="u-full-width" placeholder="Describe Task" id="todoDesc"></textarea>
   <input class="button-primary" type="submit" value="Submit">
 </form>
