--- a/index.html
+++ b/index.html
@@ -37,29 +37,31 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div class="container" style="text-align:center;">
-    <h4>CPS530 Demo Page</h4>
-  </div>
-  <div class="container">
-    <form>
-  <div class="row">
-    <div class="six columns">
+      <div style="background-color:white;">
+      <div class="container" style="text-align:center;">
+      <h4>CPS530 Demo Page</h4>
+      </div>
+      <div class="container">
+      <form action="" method="GET">
+      <div class="row">
+      <div class="six columns">
       <label for="todoInput">Your Task</label>
       <input class="u-full-width" type="text" placeholder="Your Task" id="todoInput">
-    </div>
-    <div class="six columns">
+      </div>
+      <div class="six columns">
       <label for="todoOption">Option</label>
       <select class="u-full-width" id="todoOption">
         <option value="Option 1">Add</option>
         <option value="Option 2">Remove</option>
       </select>
-    </div>
-  </div>
-  <label for="todoDesc">Task Description</label>
-  <textarea class="u-full-width" placeholder="Describe Task" id="todoDesc"></textarea>
-  <input class="button-primary" type="submit" value="Submit">
-</form>
-  </div>
+      </div>
+      </div>
+      <label for="todoDesc">Task Description</label>
+      <textarea class="u-full-width" placeholder="Describe Task" id="todoDesc"></textarea>
+      <input class="button-primary" type="submit" value="Submit">
+      </form>
+      </div>
+      </div>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
