--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-      <div style="background-color:white;display:inline-block;">
+      <div style="background-color:white;display:inline-block;text-align:center;">
       <div class="container" style="text-align:center;">
       <h4>CPS530 Demo Page</h4>
       </div>
