--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <center>
       <div style="background-color:white;display:inline-block;text-align:center;">
       <div class="container" style="text-align:center;">
       <h4>CPS530 Demo Page</h4>
@@ -62,6 +63,7 @@
       </form>
       </div>
       </div>
+      </center>
 
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
