--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <center>
-      <div style="background-color:white;display:inline-block;text-align:center;">
+      <div style="background-color:white;display:inline-block;text-align:center;border-radius:25px;">
       <div class="container" style="text-align:center;">
       <h4>CPS530 Demo Page</h4>
       </div>
