--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
-<body style="background-color:lightblue;">
+<body style="background-image: url('https://cdnb.artstation.com/p/assets/images/images/009/548/901/large/jarvis-xciv-16x9-bandit01.jpg?1519621054');">
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
