--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 -->
 <!DOCTYPE html>
 <html lang="en">
+<style>
+   #footer { position: fixed; bottom: 0; }
+</style>
+      
 <head>
 
   <!-- Basic Page Needs
@@ -64,7 +68,9 @@
       </div>
       </div>
       </center>
-
+   <div id="footer"style="background-color:yellow;">
+         <a href="">Back to Tutorial Page</a>
+   </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
