--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-   #footer { position: fixed; bottom: 0; }
+   #footer 
+      {
+         position: fixed; bottom: 0; 
+      }
 </style>
       
 <head>
@@ -68,7 +71,7 @@
       </div>
       </div>
       </center>
-   <div id="footer"style="background-color:yellow;">
+   <div class="u-full-width" id="footer"style="background-color:yellow;">
          <a href="">Back to Tutorial Page</a>
    </div>
 <!-- End Document
