--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       </div>
       </center>
-   <div class="u-full-width" id="footer"style="background-color:yellow;">
+   <div class="u-full-width" id="footer"style="background-color:#FDBF20;">
          <a href="">Back to Tutorial Page</a>
    </div>
 <!-- End Document
