--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
    #footer 
       {
-         position: fixed; bottom: 0; 
+         position: fixed; bottom: 15%; 
       }
 </style>
       
