--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <style>
    #footer 
       {
-         position: fixed; bottom: 15%; 
+         position: fixed; 
+         bottom: 15%; 
+         background-color:#FCC024;
       }
 </style>
       
@@ -71,7 +73,7 @@
       </div>
       </div>
       </center>
-   <div class="u-full-width" id="footer"style="background-color:#FDBF20;">
+   <div class="u-full-width" id="footer">
          <a href="">Back to Tutorial Page</a>
    </div>
 <!-- End Document
