--- a/index.html
+++ b/index.html
@@ -7,6 +7,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
+  .sidenav 
+{
+  height: 100%;
+  width: 160px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.sidenav a 
+{
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+}
+
+.sidenav a:hover 
+{
+  color: #f1f1f1;
+}
    #footer 
       {
          position: fixed; 
@@ -73,6 +99,10 @@
       </div>
       </div>
       </center>
+   <div class="u-pull-left">
+         <p>hi</p>
+         <p>bye</p>
+   </div>
    <div class="u-full-width" id="footer">
          <a href="">Back to Tutorial Page</a>
    </div>
