--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <div class="u-pull-left" width="10%">
+            <a> href="">Page 1</a>
+            <a> href="">Page 2</a>
+            <a> href="">Page 3</a>
+      </div>
       <center>
       <div style="background-color:white;display:inline-block;text-align:center;border-radius:25px;">
       <div class="container" style="text-align:center;">
@@ -99,10 +104,6 @@
       </div>
       </div>
       </center>
-   <div class="u-pull-left">
-         <p>hi</p>
-         <p>bye</p>
-   </div>
    <div class="u-full-width" id="footer">
          <a href="">Back to Tutorial Page</a>
    </div>
