--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <div class="u-pull-left" width="10%">
-            <a> href="">Page 1</a>
-            <a> href="">Page 2</a>
-            <a> href="">Page 3</a>
+            <a href="">Page 1</a>
+            <a href="">Page 2</a>
+            <a href="">Page 3</a>
       </div>
       <center>
       <div style="background-color:white;display:inline-block;text-align:center;border-radius:25px;">
