--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
       <div class="u-pull-left" width="10%">
-            <a href="">Page 1</a>
-            <a href="">Page 2</a>
+            <a href="">Page 1</a><br>
+            <a href="">Page 2</a><br>
             <a href="">Page 3</a>
       </div>
       <center>
