--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-   .bg {
-  background-image: url("https://i.ytimg.com/vi/J3E6ULw28d0/maxresdefault.jpg");
-  height: 100%;
+   .bg 
+      {
+        background-image: url("https://i.ytimg.com/vi/J3E6ULw28d0/maxresdefault.jpg");
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
    #footer 
       {
          position: fixed; 
