--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    .bg 
       {
         background-image: url("https://cdna.artstation.com/p/assets/images/images/009/548/270/large/jarvis-xciv-16x9-mute01.jpg?1519618354");
+        background-position: center;
+        height:100%;
       }
    #footer 
       {
