--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </div>
       </center>
    <div class="u-full-width" id="footer">
-         <a class="button button-primary" style="background: images/favicon.png;" href="http://getskeleton.com/#intro"></a>
+         <a class="button button-primary" style="background-image: images/favicon.png" href="http://getskeleton.com/#intro"></a>
    </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
