--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
       </center>
    <div class="u-full-width" id="footer">
          <a class="button button-primary" style="background-image: images/favicon.png" href="http://getskeleton.com/#intro"></a>
+         <a class="button button-primary" style="background-image: images/django-pony.png" href="https://www.djangoproject.com/"></a>
    </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
