--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+      <!-- Bootstrap used only for the nav bar -->
   <link rel="stylesheet" href="skeleton/normalize.css">
   <link rel="stylesheet" href="skeleton/skeleton.css">
 
