--- a/index.html
+++ b/index.html
@@ -108,8 +108,12 @@
       </div>
       </center>
    <div class="u-full-width" id="footer">
-         <a class="button button-primary" style="background-image: images/favicon.png" href="http://getskeleton.com/#intro"></a>
-         <a class="button button-primary" style="background-image: images/django-pony.png" href="https://www.djangoproject.com/"></a>
+ <form action="">
+  <input type="image" src="images/skeletonLogo.png" alt="Submit" width="48" height="48">
+</form>
+          <form action="">
+  <input type="image" src="images/django-pony.png" alt="Submit" width="48" height="48">
+</form>
    </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
