--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
       </center>
    <div class="u-full-width" id="footer">
  <form action="">
-  <input type="image" src="images/skeletonLogo.png" alt="Submit" width="48" height="48">
+  <input type="image" src="images/favicon.png" alt="Submit" width="100" height="100">
 </form>
           <form action="">
-  <input type="image" src="images/django-pony.png" alt="Submit" width="48" height="48">
+  <input type="image" src="images/django-pony.png" alt="Submit" width="100" height="100">
 </form>
    </div>
 <!-- End Document
