--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         background-image: url("https://cdna.artstation.com/p/assets/images/images/009/548/270/large/jarvis-xciv-16x9-mute01.jpg?1519618354");
         height:100%;
       }
+   form {
+    padding: 5px;
+    background-color: #eee;
+    display: inline-block;
+}
    #footer 
       {
          position: fixed;
