--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    #footer 
       {
          position: fixed;
-         bottom: 5%; 
+         bottom: 0%; 
       }
 </style>
       
@@ -112,12 +112,14 @@
       </div>
       </center>
    <div class="u-full-width" id="footer">
+ <center>
  <form action="">
   <input type="image" src="images/favicon.png" alt="Submit" width="100" height="100">
 </form>
           <form action="">
   <input type="image" src="images/django-pony.png" alt="Submit" width="100" height="100">
 </form>
+         </center>
    </div>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
