--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
       </center>
    <div class="u-full-width" id="footer">
  <center>
- <form action="">
+ <form action="http://getskeleton.com/">
   <input type="image" src="images/favicon.png" alt="Submit" width="100" height="100">
 </form>
-          <form action="">
+ <form action="https://www.djangoproject.com/">
   <input type="image" src="images/django-pony.png" alt="Submit" width="100" height="100">
 </form>
          </center>
