--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
         background-image: url("https://cdna.artstation.com/p/assets/images/images/009/548/270/large/jarvis-xciv-16x9-mute01.jpg?1519618354");
         height:100%;
       }
-   form {
-    padding: 40px;
+   #iconButton {
+    padding-left:30px;
+    padding-right:30px;
     display: inline-block;
 }
    #footer 
@@ -113,10 +114,10 @@
       </center>
    <div class="u-full-width" id="footer">
  <center>
- <form action="http://getskeleton.com/">
+ <form class="iconButton" action="http://getskeleton.com/">
   <input type="image" src="images/favicon.png" alt="Submit" width="100" height="100">
 </form>
- <form action="https://www.djangoproject.com/">
+ <form class="iconButton" action="https://www.djangoproject.com/">
   <input type="image" src="images/django-pony.png" alt="Submit" width="100" height="100">
 </form>
          </center>
