--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
       </center>
    <div class="u-full-width" id="footer">
  <center>
- <form class="iconButton" action="http://getskeleton.com/">
+ <form id="iconButton" action="http://getskeleton.com/">
   <input type="image" src="images/favicon.png" alt="Submit" width="100" height="100">
 </form>
- <form class="iconButton" action="https://www.djangoproject.com/">
+ <form id="iconButton" action="https://www.djangoproject.com/">
   <input type="image" src="images/django-pony.png" alt="Submit" width="100" height="100">
 </form>
          </center>
