--- a/index.html
+++ b/index.html
@@ -89,26 +89,30 @@
       <div style="background-color:white;display:inline-block;text-align:center;border-radius:25px;margin-top:65px;">
       <div class="container" style="text-align:center;">
       <h4>CPS530 Demo Page</h4>
+            <h2> To-Do List UI Planning Template</h2>
       </div>
       <div class="container">
-      <form action="" method="GET">
-      <div class="row">
-      <div class="six columns">
-      <label for="todoInput">Your Task</label>
-      <input class="u-full-width" type="text" placeholder="Your Task" id="todoInput">
-      </div>
-      <div class="six columns">
-      <label for="todoOption">Option</label>
-      <select class="u-full-width" id="todoOption">
-        <option value="Option 1">Add</option>
-        <option value="Option 2">Remove</option>
-      </select>
-      </div>
-      </div>
-      <label for="todoDesc">Task Description</label>
-      <textarea class="u-full-width" placeholder="Describe Task" id="todoDesc"></textarea>
-      <input class="button-primary" type="submit" value="Submit">
-      </form>
+            <div class="row">
+                  <div class = "twelve column">Task</div>
+            </div>
+            <div class="row">
+                  <div class="four column">Picture</div>
+                  <div class-"eight column">Task Description</div>
+            </div>
+            <div class="row">
+                  <div class = "twelve column">Task</div>
+            </div>
+            <div class="row">
+                  <div class="four column">Picture</div>
+                  <div class-"eight column">Task Description</div>
+            </div>
+            <div class="row">
+                  <div class = "twelve column">Task</div>
+            </div>
+            <div class="row">
+                  <div class="four column">Picture</div>
+                  <div class-"eight column">Task Description</div>
+            </div>
       </div>
       </div>
       </center>
