--- a/index.html
+++ b/index.html
@@ -92,24 +92,24 @@
             <h2> To-Do List UI Planning Template</h2>
       </div>
       <div class="container">
-            <div class="row">
+            <div class="row" style="padding:5px;background-color:grey;">
                   <div class = "twelve column">Task</div>
             </div>
-            <div class="row">
+            <div class="row" style="padding:5px;background-color:grey;">
                   <div class="four column">Picture</div>
                   <div class-"eight column">Task Description</div>
             </div>
-            <div class="row">
+            <div class="row" style="padding:5px;background-color:grey;">
                   <div class = "twelve column">Task</div>
             </div>
-            <div class="row">
+            <div class="row" style="padding:5px;background-color:grey;">
                   <div class="four column">Picture</div>
                   <div class-"eight column">Task Description</div>
             </div>
-            <div class="row">
+            <div class="row" style="padding:5px;background-color:grey;">
                   <div class = "twelve column">Task</div>
             </div>
-            <div class="row">
+            <div class="row" style="padding:5px;background-color:grey;">
                   <div class="four column">Picture</div>
                   <div class-"eight column">Task Description</div>
             </div>
