--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
       </div>
       <div class="container">
             <div class="row" style="padding:5px;background-color:grey;">
-                  <div class = "twelve column">Task</div>
+                  <div class = "twelve columns">Task</div>
             </div>
             <div class="row" style="padding:5px;background-color:grey;">
-                  <div class="four column">Picture</div>
-                  <div class-"eight column">Task Description</div>
+                  <div class="four columns">Picture</div>
+                  <div class-"eight columns">Task Description</div>
             </div>
             <div class="row" style="padding:5px;background-color:grey;">
-                  <div class = "twelve column">Task</div>
+                  <div class = "twelve columns">Task</div>
             </div>
             <div class="row" style="padding:5px;background-color:grey;">
-                  <div class="four column">Picture</div>
-                  <div class-"eight column">Task Description</div>
+                  <div class="four columns">Picture</div>
+                  <div class-"eight columns">Task Description</div>
             </div>
             <div class="row" style="padding:5px;background-color:grey;">
-                  <div class = "twelve column">Task</div>
+                  <div class = "twelve columns">Task</div>
             </div>
             <div class="row" style="padding:5px;background-color:grey;">
-                  <div class="four column">Picture</div>
-                  <div class-"eight column">Task Description</div>
+                  <div class="four columns">Picture</div>
+                  <div class-"eight columns">Task Description</div>
             </div>
       </div>
       </div>
