--- a/index.html
+++ b/index.html
@@ -92,21 +92,21 @@
             <h2> To-Do List UI Planning Template</h2>
       </div>
       <div class="container">
-            <div class="row" style="background-color:grey;">
+            <div class="row">
                   <div class = "twelve columns">Task</div>
             </div>
-            <div class="row" style="background-color:grey;">
+            <div class="row">
                   <div class="four columns">Picture</div>
                   <div class-"eight columns">Task Description</div>
             </div>
-            <div class="row" style="background-color:grey;">
+            <div class="row">
                   <div class = "twelve columns">Task</div>
             </div>
-            <div class="row" style="background-color:grey;">
+            <div class="row">
                   <div class="four columns">Picture</div>
                   <div class-"eight columns">Task Description</div>
             </div>
-            <div class="row" style="background-color:grey;">
+            <div class="row">
                   <div class = "twelve columns">Task</div>
             </div>
             <div class="row" style="background-color:grey;">
