--- a/index.html
+++ b/index.html
@@ -97,21 +97,21 @@
             </div>
             <div class="row">
                   <div class="four columns">Picture</div>
-                  <div class-"eight columns">Task Description</div>
+                  <div class="eight columns">Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns">Task</div>
             </div>
             <div class="row">
                   <div class="four columns">Picture</div>
-                  <div class-"eight columns">Task Description</div>
+                  <div class="eight columns">Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns">Task</div>
             </div>
-            <div class="row" style="background-color:grey;">
-                  <div class="four columns">Picture</div>
-                  <div class-"eight columns">Task Description</div>
+            <div class="row">
+                  <div class="four columns" style="background-color:grey;">Picture</div>
+                  <div class="eight columns" style="background-color:grey;">Task Description</div>
             </div>
       </div>
       </div>
