--- a/index.html
+++ b/index.html
@@ -93,25 +93,25 @@
       </div>
       <div class="container">
             <div class="row">
-                  <div class = "twelve columns" style="background-color:grey;border-radius:25px;">Task</div>
+                  <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
             <div class="row">
-                  <div class="four columns" style="background-color:grey;border-radius:25px;">Picture</div>
-                  <div class="eight columns" style="background-color:grey;border-radius:25px;">Task Description</div>
+                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
             </div>
             <div class="row">
-                  <div class = "twelve columns" style="background-color:grey;border-radius:25px;">Task</div>
+                  <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
             <div class="row">
-                  <div class="four columns" style="background-color:grey;border-radius:25px;">Picture</div>
-                  <div class="eight columns" style="background-color:grey;border-radius:25px;">Task Description</div>
+                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
             </div>
             <div class="row">
-                  <div class = "twelve columns" style="background-color:grey;border-radius:25px;">Task</div>
+                  <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
             <div class="row">
-                  <div class="four columns" style="background-color:grey;border-radius:25px;">Picture</div>
-                  <div class="eight columns" style="background-color:grey;border-radius:25px;">Task Description</div>
+                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
             </div>
       </div>
       </div>
