--- a/index.html
+++ b/index.html
@@ -95,21 +95,21 @@
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
-            <div class="row" style="border-bottom-style:solid;border-color=red;">
+            <div class="row" style="border-bottom-style:solid;=">
                   <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
                   <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
-            <div class="row" style="border-bottom-style:solid;border-color=red;">
+            <div class="row" style="border-bottom-style:solid;">
                   <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
                   <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
-            <div class="row" style="border-bottom-style:solid;border-color=red;">
+            <div class="row" style="border-bottom-style:solid;">
                   <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
                   <div class="eight columns" style="background-color:lightgrey;border-radius:25px;;">Task Description</div>
             </div>
