--- a/index.html
+++ b/index.html
@@ -96,22 +96,22 @@
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
             <div class="row" style="border-bottom-style:solid;height:80px;">
-                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
-                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
+                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Picture</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;"height:60px;>Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
-            <div class="row" style="border-bottom-style:solid;">
-                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
-                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;">Task Description</div>
+            <div class="row" style="border-bottom-style:solid;height:80px;">
+                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Picture</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
-            <div class="row" style="border-bottom-style:solid;">
-                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;">Picture</div>
-                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;;">Task Description</div>
+            <div class="row" style="border-bottom-style:solid;height:80px;">
+                  <div class="four columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Picture</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Task Description</div>
             </div>
       </div>
       </div>
