--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
             <div class="row" style="border-bottom-style:solid;height:80px;">
                   <div class="four columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Picture</div>
-                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;"height:60px;>Task Description</div>
+                  <div class="eight columns" style="background-color:lightgrey;border-radius:25px;height:60px;">Task Description</div>
             </div>
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
