--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <h4>CPS530 Demo Page</h4>
             <h2> To-Do List UI Planning Template</h2>
       </div>
-      <div class="example-grid docs-example">
+      <div class="container">
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
             </div>
