--- a/index.html
+++ b/index.html
@@ -117,6 +117,25 @@
                   <div class="eight columns" style="background-color:lightgrey;border-radius:25px;height:70px;">Task Description</div>
             </div>
       </div>
+      <form>
+  <div class="row">
+    <div class="six columns">
+      <label for="taskInput">Your Task</label>
+      <input class="u-full-width" type="email" placeholder="Task Name" id="taskInput">
+    </div>
+    <div class="six columns">
+      <label for="options">Options</label>
+      <select class="u-full-width" id="options">
+        <option value="Option 1">Add</option>
+        <option value="Option 2">Remove</option>
+      </select>
+    </div>
+  </div>
+  <label for="taskDescription">Message</label>
+  <textarea class="u-full-width" placeholder="Do this...." id="taskDescription"></textarea>
+  </label>
+  <input class="button-primary" type="submit" value="Submit">
+</form>
       </div>
       </center>
    <div class="u-full-width" id="footer">
