--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
       </div>
                   <form>
   <div class="row">
-    <div class="six columns">
+    <div class="five columns">
       <label for="taskInput">Your Task</label>
       <input class="u-full-width" type="email" placeholder="Task Name" id="taskInput">
     </div>
-    <div class="six columns">
+    <div class="five columns">
       <label for="options">Options</label>
       <select class="u-full-width" id="options">
         <option value="Option 1">Add</option>
