--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       <h4>CPS530 Demo Page</h4>
             <h2> To-Do List UI Planning Template</h2>
       </div>
-                  <form>
+  <div class="container">
+   <form>
   <div class="row">
     <div class="five columns">
       <label for="taskInput">Your Task</label>
@@ -110,6 +111,7 @@
   </label>
   <input class="button-primary" type="submit" value="Submit">
 </form>
+            </div>
       <div class="container">
             <div class="row">
                   <div class = "twelve columns" style="background-color:lightgrey;border-radius:25px;">Task</div>
