--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <h2> To-Do List UI Planning Template</h2>
       </div>
   <div class="container">
+   <center>
    <form>
   <div class="row">
     <div class="five columns">
@@ -111,6 +112,7 @@
   </label>
   <input class="button-primary" type="submit" value="Submit">
 </form>
+        </center>
             </div>
       <div class="container">
             <div class="row">
