--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
             <h2> To-Do List UI Planning Template</h2>
       </div>
   <div class="container">
-   <center>
    <form>
   <div class="row">
-    <div class="five columns">
+    <div class="six columns">
       <label for="taskInput">Your Task</label>
       <input class="u-full-width" type="email" placeholder="Task Name" id="taskInput">
     </div>
-    <div class="five columns">
+    <div class="six columns">
       <label for="options">Options</label>
       <select class="u-full-width" id="options">
         <option value="Option 1">Add</option>
@@ -112,7 +111,6 @@
   </label>
   <input class="button-primary" type="submit" value="Submit">
 </form>
-        </center>
             </div>
       <div class="container">
             <div class="row">
