--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <div class="row">
     <div class="six columns">
       <label for="taskInput">Your Task</label>
-      <input class="u-full-width" type="email" placeholder="Task Name" id="taskInput">
+      <input class="u-full-width" type="text" placeholder="Task Name" id="taskInput">
     </div>
     <div class="six columns">
       <label for="options">Options</label>
