--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="teamProject_feedback.html">Conclusions</a></li>
-            <li><a href="teamProject_creits.html">Credits</a></li>
+            <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_main.htmlteamProject_feedback.html">Conclusions</a></li>
+            <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_main.htmlteamProject_creits.html">Credits</a></li>
           </ul>
         </li>
       </ul>
