--- a/index.html
+++ b/index.html
@@ -75,17 +75,16 @@
         <li><a href="https://eyho-cao.github.io/">Skeleton DEMO</a></li>
 	<li><a href="http://joshuahuerto2.pythonanywhere.com/admin/login/?next=/admin/">Django DEMO</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-          <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_main.htmlteamProject_feedback.html">Conclusions</a></li>
-            <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_main.htmlteamProject_creits.html">Credits</a></li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
+            <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="teamProject_feedback.html">Conclusions</a></li>
+              <li><a href="teamProject_creits.html">Credits</a></li>
+            </ul>
+       </ul>
+      </div>
+     </div>
+     </nav>
 
       <center>
       <div style="background-color:white;display:inline-block;text-align:center;border-radius:25px;margin-top:65px;">
