--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
         <li><a href="https://eyho-cao.github.io/">Skeleton DEMO</a></li>
 	<li><a href="http://joshuahuerto2.pythonanywhere.com/admin/login/?next=/admin/">Django DEMO</a></li>
         <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
-            <span class="caret"></span></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="teamProject_feedback.html">Conclusions</a></li>
               <li><a href="teamProject_creits.html">Credits</a></li>
