--- a/index.html
+++ b/index.html
@@ -69,17 +69,17 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="teamProject_main.html">HOME</a></li>
-        <li><a href="teamProject_framwork.html">Installation</a></li>
-        <li><a href="totorial.html">Tutorial</a></li>
+        <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_main.html">HOME</a></li>
+        <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_framwork.html">Installation</a></li>
+        <li><a href="http://scs.ryerson.ca/~e2cao/totorial.html">Tutorial</a></li>
         <li><a href="https://eyho-cao.github.io/">Skeleton DEMO</a></li>
 	<li><a href="http://joshuahuerto2.pythonanywhere.com/admin/login/?next=/admin/">Django DEMO</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="teamProject_feedback.html">Conclusions</a></li>
-            <li><a href="teamProject_creits.html">Credits</a></li>
+            <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_feedback.html">Conclusions</a></li>
+            <li><a href="http://scs.ryerson.ca/~e2cao/teamProject_creits.html">Credits</a></li>
           </ul>
          </li>
         </ul>
