--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </div>
       </div>
       </center>
-   <div class="u-full-width" id="footer">
+   <footer class="u-full-width">
  <center>
  <form id="iconButton" action="http://getskeleton.com/">
   <input type="image" src="images/favicon.png" alt="Submit" width="100" height="100">
@@ -143,7 +143,7 @@
   <input type="image" src="images/django-pony.png" alt="Submit" width="100" height="100">
 </form>
          </center>
-   </div>
+   </footer>
 <!-- End Document
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
