--- a/index.html
+++ b/index.html
@@ -11,18 +11,20 @@
 	<body>
 		<div>
 			<center>
-			<a href="#" class="rndBtn"> <!-- Change this "div" to button with rounded edges. On btnClick redirect to resume page?-->
-				<img class="rndImg" src="" alt="" height="30" width="30">
-				<p style="text-align: center">
-					Lourem Ipsum Stuff Filler. Yes.
-				</p>
-			</a>
-			<a href="#" class="rndBtn"> <!-- Change this "div" to button with rounded edges on btnClick redirect to personal page-->
-				<img class="rndImg" src="" alt="" height="30" width="30">
-				<p style="text-align: center">
-					Lourem Ipsum Stuff Filler. No.
-				</p>
-			</a>
+			<div class="btn-group">
+				<a href="#" class="rndBtn"> <!-- Change this "div" to button with rounded edges. On btnClick redirect to resume page?-->
+					<img class="rndImg" src="" alt="" height="30" width="30">
+					<p style="text-align: center">
+						Lourem Ipsum Stuff Filler. Yes.
+					</p>
+				</a>
+				<a href="#" class="rndBtn"> <!-- Change this "div" to button with rounded edges on btnClick redirect to personal page-->
+					<img class="rndImg" src="" alt="" height="30" width="30">
+					<p style="text-align: center">
+						Lourem Ipsum Stuff Filler. No.
+					</p>
+				</a>
+			</div>
 			</center>
 		</div>
 		<footer>
