--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			</div>
 			</center>
 		</div>
-		<footer>
+		<footer style="background-color:black">
+			<p>more filler!!!!!!!</p>
 		</footer>
 		
 	</body>
