--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<div>
 			<center>
 			<div id="container">
-   				 <button type="button button4" id="button1" >temp</button>
-  				 <button type="button button4" id="button2">temp2</button>
+   				 <button class="button button4" id="button1" >temp</button>
+  				 <button class="button button4" id="button2">temp2</button>
 			</div>
 			</center>
 		</div>
