--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 		<link rel="icon" type="image/png" href="images/wip.png">
 	</head>
 	<body>
+		<button class="button button4">12px</button>
 		<div>
 			<center>
 			<div id="container">
-   				 <button class="button button4">temp</button>
+   				 <button class="button button4">12px</button>
   				 <button class="button button4">temp2</button>
 			</div>
 			</center>
