--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
 		</title>
 		<link rel="icon" type="image/png" href="images/wip.png">
 	</head>
-	<body>
-		<button class="button button4">12px</button>
-		<div>
-			<center>
-			<div id="container">
-   				 <button class="button button4">12px</button>
-  				 <button class="button button4">temp2</button>
-			</div>
-			</center>
+	<body style="background: url('RyeHighTemp.jpg'); background-repeat: no-repeat; background-size: cover;">
+		<center>
+		<div class="btn-toolbar" role="toolbar" style="display:inline-block; padding-top: 25px;">
+			<div class="btn-group mr-2">
+				<a href="#" class="btn btn-default btnSpace" id="rnd"> <img src="blank.png" alt="Headshot" id="cir" height="150;"> <h6>Resume Stuff?</h6><p>Lourem Ipsum stuff stuff yes</p> </a>
+			</div>	
+			<div class="btn-group">
+				<a href="#" class="btn btn-default" id="rnd"> <img src="snakeHead.png" alt="Picture" id="cir" height="150;"> <h6>personal website sutff?</h6><p>Lourem Ipsum stuff stuff nono</p> </a>
+			</div>	
 		</div>
-		<footer style="background-color:black">
+		</center>				
+		<div class="footer">
 			<p>more filler!!!!!!!</p>
-		</footer>
+		</div>
 		
 	</body>
 </html>
