--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		</title>
 		<link rel="icon" type="image/png" href="images/wip.png">
 	</head>
-	<body style="background: url('RyeHighTemp.jpg'); background-repeat: no-repeat; background-size: cover;">
+	<body style="background: url('images/RyeHighTemp.jpg'); background-repeat: no-repeat; background-size: cover;">
 		<center>
 		<div class="btn-toolbar" role="toolbar" style="display:inline-block; padding-top: 25px;">
 			<div class="btn-group mr-2">
-				<a href="#" class="btn btn-default btnSpace" id="rnd"> <img src="blank.png" alt="Headshot" id="cir" height="150;"> <h6>Resume Stuff?</h6><p>Lourem Ipsum stuff stuff yes</p> </a>
+				<a href="#" class="btn btn-default btnSpace" id="rnd"> <img src="images/blank.png" alt="Headshot" id="cir" height="150;"> <h6>Resume Stuff?</h6><p>Lourem Ipsum stuff stuff yes</p> </a>
 			</div>	
 			<div class="btn-group">
-				<a href="#" class="btn btn-default" id="rnd"> <img src="snakeHead.png" alt="Picture" id="cir" height="150;"> <h6>personal website sutff?</h6><p>Lourem Ipsum stuff stuff nono</p> </a>
+				<a href="#" class="btn btn-default" id="rnd"> <img src="images/snakeHead.png" alt="Picture" id="cir" height="150;"> <h6>personal website sutff?</h6><p>Lourem Ipsum stuff stuff nono</p> </a>
 			</div>	
 		</div>
 		</center>				
